// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with blocks updates positions when a block is added 1`] = `
Array [
  Array [
    Object {
      "blocks": Array [
        Object {
          "index": 0,
          "name": "Block",
          "vx": -293.1711662867405,
          "vy": 0.000028033381886907253,
          "x": -294.1711662867405,
          "y": 0.000028033381886907253,
        },
        Object {
          "index": 1,
          "name": "New block",
          "vx": 293.1711662867405,
          "vy": 0.000028033381886907253,
          "x": 294.1711662867405,
          "y": 0.000028033381886907253,
        },
      ],
      "type": "UPDATE_FORCE",
    },
  ],
]
`;

exports[`without blocks does not update position when a block is added 1`] = `
Array [
  Array [
    Object {
      "blocks": Array [
        Object {
          "index": 0,
          "name": "New block",
          "vx": 0,
          "vy": 0,
          "x": 1,
          "y": 0,
        },
      ],
      "type": "UPDATE_FORCE",
    },
  ],
]
`;
